--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
   --colores-semnticos-gray-gray-2: #666666;
   --colores-semnticos-gray-gray-4: #fafafa;
   --colores-semnticos-info-info-1: #2196f3;
-  --colores-semnticos-info-info-3: #2196f3;
+  --colores-semnticos-info-info-3: #E3F2FD;
   --colores-semnticos-warning-warning-2: #ffd54f;
   --colores-semnticos-warning-warning-3: #fff8e1;
   --gray-gray-2: #666666;
