feat: finish company view

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
 
 :root {
   --colores-semnticos-gray-gray-2: #666666;
+  --colores-semnticos-gray-gray-3: #A1A1A1;
   --colores-semnticos-gray-gray-4: #fafafa;
   --colores-semnticos-info-info-1: #2196f3;
   --colores-semnticos-info-info-3: #E3F2FD;
