--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@
   --principales-secondary-secondary-2: #e565a5;
   --principales-secondary-secondary-3: #fffbfc;
   --principales-success-succes-1: #8bc34a;
+  --loader: #fe1c7d;
 }
 
 .loader {
@@ -43,7 +44,7 @@
   position: absolute;
   inset: 0;
   border-radius: 50%;
-  --c: #0000, #f03355 1deg 120deg, #0000 121deg;
+  --c: #0000, var(--loader) 1deg 120deg, #0000 121deg;
   background:
     conic-gradient(from 0deg, var(--c)) top right,
     conic-gradient(from 120deg, var(--c)) bottom,
